--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,10 @@
-<html>
-    <body>
-        <script src="src/index.ts"></script>
-    </body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>My First Parcel App</title>
+    <script type="module" src="./src/index.ts"></script>
+  </head>
+  <body>
+  </body>
 </html>
