--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8"/>
     <title>My First Parcel App</title>
-    <script type="module" src="./src/index.ts"></script>
   </head>
   <body>
+    <div id="root"></div>
+    <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
